--- a/docs/_data/prj_description.yml
+++ b/docs/_data/prj_description.yml
@@ -1,7 +1,7 @@
-ibshell_description: "A custom universal CLI written in bash"
-ipshell_description: "A custom universal CLI written in python"
-slotly_description:  "A time slot booking written using Django"
-plearn_description:  "A Learning Platform"
-pubme_description:  "Publish and share any service via a free public IP"
-jekyll_description:  "Quickly build and test a Jekyll website"
-topix_description:   "A documentation hub"
+ibshell_description: "A custom universal CLI written in bash."
+ipshell_description: "A custom universal CLI written in python."
+slotly_description:  "A time slot booking written using Django."
+plearn_description:  "A Learning Platform."
+pubme_description:   "Publish and share any service via a free public IP."
+jekyll_description:  "Quickly build and test a Jekyll website."
+topix_description:   "A documentation hub."
