--- a/docs/_data/project_name.yml
+++ b/docs/_data/project_name.yml
@@ -1,7 +1,8 @@
-ibshell_name: "Ibshell"
-ipshell_name: "Ipshell"
-slotly_name:  "Slotly"
-plearn_name:  "Plearn"
-pubme_name:   "Pubme"
-jekyll_name:  "Jekyll"
-topix_name:   "Topix"
+do_description: "Do"
+ibshell_name:   "Ibshell"
+ipshell_name:   "Ipshell"
+slotly_name:    "Slotly"
+plearn_name:    "Plearn"
+pubme_name:     "Pubme"
+jekyll_name:    "Jekyll"
+topix_name:     "Topix"
