--- a/docs/_data/project_description.yml
+++ b/docs/_data/project_description.yml
@@ -6,3 +6,6 @@ plearn_description:  "A Learning Platform."
 pubme_description:   "Publish and share any service via a free public IP."
 jekyll_description:  "Quickly build and test a Jekyll website."
 topix_description:   "A documentation hub."
+asmat_description:   "A tool to help Asmat day to day"
+music_description:   "Create collaborative sound"
+dirand_description:  "anti spam tool"
