--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ _site
 .jekyll-metadata
 vendor
 # these 2 files are not needed when publishing to github pages
-/docs/Gemfile
-/docs/Gemfile.lock
+docs/Gemfile
+docs/Gemfile.lock
