--- a/docs/_data/prj_description.yml
+++ b/docs/_data/prj_description.yml
@@ -1,3 +1,3 @@
-pizza_desc:      "Restaurant ou chaine la pizza de Nice"
+pizza_desc:      "Chaine de restaurant : la pizza de Nice"
 dentifrice_desc: "vendre une crème anti moustique sous marque blanche"
 senior_desc:     "Centre de support/assistance pour Senior"
