--- a/docs/_data/project_name.yml
+++ b/docs/_data/project_name.yml
@@ -1,8 +1,8 @@
 do_name:      "Do"
-ibshell_name: "Ibshell"
-ipshell_name: "Ipshell"
-slotly_name:  "Slotly"
-plearn_name:  "Plearn"
-pubme_name:   "Pubme"
-jekyll_name:  "Jekyll"
-topix_name:   "Topix"
+ibshell_name: " `Ibshell` "
+ipshell_name: " `Ipshell` "
+slotly_name:  " `Slotly` "
+plearn_name:  " `Plearn` "
+pubme_name:   " `Pubme` " 
+jekyll_name:  " `Jekyll` "
+topix_name:   " `Topix` "
