--- a/docs/_data/site_name.yml
+++ b/docs/_data/site_name.yml
@@ -4,6 +4,7 @@ definition:   "Definition"
 description:  "Description"
 purpose:      "Purpose"
 requirement:  "Requirement"
+reference:    "Reference"
 yaml:         " `YAML.` "
 html:         " `HTML.` "
 
