--- a/docs/_data/name.yml
+++ b/docs/_data/name.yml
@@ -5,6 +5,12 @@ description:  "Description"
 purpose:      "Purpose"
 requirement:  "Requirement"
 reference:    "Reference"
+# name
+liquid:       " `Liquid.` "
+markdown:     " `Markdown.` "
 yaml:         " `YAML.` "
 html:         " `HTML.` "
-
+# short
+kvpair:       "key value pairs"
+sdef:         "define by the system"
+udef:         "define by the user"
