--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,7 +30,7 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # # Build settings
-theme: mxjkth01
+theme: topix-jk-theme-01
 
 # plugins:
 #   - jekyll-feed
