--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,12 +26,14 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: ""     # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
-# # Build settings
-theme: topix-jk-theme-01
+# Build settings
+# markdown:  kramdown
+# permalink: pretty
+theme:    topix-jk-theme-01
 
 # plugins:
 #   - jekyll-feed
