--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -48,13 +48,19 @@ mx:
 collections:
   definitions: 
     output: true
-    icon: "/assets/icons/definitions-icon.svg"
+    icon: "/assets/icons/clouds.svg"
+  definitions: 
+    output: true
+    icon: "/assets/icons/definitions.svg"
+  languages: 
+    output: true
+    icon: "/assets/icons/languages.svg"
   projects: 
     output: true
-    icon: "/assets/icons/projects-icon.svg"
+    icon: "/assets/icons/projects.svg"
   tools: 
     output: true 
-    icon: "/assets/icons/tools-icon.svg"
+    icon: "/assets/icons/tools.svg"
 
 # default frontmatter for content type: pages
 defaults:
