--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -44,9 +44,11 @@ destination: /tmp/site/it
 mx:
   domain: IT
 
-# Collection Udef
+# Collection udef
 collections:
-  definitions: 
+  clouds: 
+    output: true
+  concepts: 
     output: true
   definitions: 
     output: true
@@ -54,6 +56,8 @@ collections:
     output: true
   projects: 
     output: true
+  os: 
+    output: true 
   tools: 
     output: true 
 
