--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -66,7 +66,7 @@ defaults:
   -
     scope:
       path: ""      # Applies to all files
-      type: "pages" # You can specify "pages", "posts", or other collections
+      type: ""      # You can specify "pages", "posts", or other collections
     values:
       layout: "page"
 
