--- a/docs/_data/topix.yml
+++ b/docs/_data/topix.yml
@@ -1,6 +1,7 @@
 # name@common
 #
-topic:    " `Topic` "
-domain:   " `Domain` "
-category: " `Category` "
-object:   " `Object` "
+topic:      " `Topic` "
+domain:     " `Domain` "
+category:   " `Category` "
+object:     " `Object` "
+classifier: " `Classifier` "
