--- a/docs/_data/topix.yml
+++ b/docs/_data/topix.yml
@@ -5,3 +5,7 @@ domain:     " `Domain` "
 category:   " `Category` "
 object:     " `Object` "
 classifier: " `Classifier` "
+list:       " `List` "
+howto:      " `Howto` "
+whatis:     " `Whatis` "
+tutorial:   " `Tutorial` "
