--- a/docs/_data/topix.yml
+++ b/docs/_data/topix.yml
@@ -3,7 +3,7 @@
 topic:      " `Topic` "
 domain:     " `Domain` "
 category:   " `Category` "
-object:     " `Object` "
+stopic:     " `STopic` "
 classifier: " `Classifier` "
 list:       " `List` "
 howto:      " `Howto` "
