--- a/docs/_data/topix.yml
+++ b/docs/_data/topix.yml
@@ -1,8 +1,9 @@
 # name@common
 #
-topic:      " `Topic` "
 domain:     " `Domain` "
 category:   " `Category` "
+section:    " `Section` "
+topic:      " `Topic` "
 stopic:     " `STopic` "
 classifier: " `Classifier` "
 list:       " `List` "
