--- a/docs/_data/name.yml
+++ b/docs/_data/name.yml
@@ -1,6 +1,22 @@
 # name@common
 #
-topix:     " `Topix` "
-framework: " `framework` "
-front:     " `front` "
-back:      " `back` "
+framework:    " `framework` "
+front:        " `front` "
+back:         " `back` "
+## tool
+anthora:      " `Anthora` "
+bootstrap:    " `Bootstrap` "
+docusaurus:   " `Docusaurus` "
+git:          " `Git` "
+hugo:         " `Hugo` "
+jekyll:       " `Jekyll` "
+topix:        " `Topix` "
+vscode:       " `VSCode` "
+## language
+bash:         " `Bash` "
+java:         " `Java` "
+latex:        " `Latex` "
+liquid:       " `Liquid` "
+mermaid:      " `Mermaid` "
+markdown:     " `Markdown` "
+yaml:         " `YAML.` "
