--- a/docs/_data/topix.yml
+++ b/docs/_data/topix.yml
@@ -1,6 +1,7 @@
 # name@common
 ## object
 domain:     " `Domain` "
+config:     " `_config.yml` "
 category:   " `Category` "
 section:    " `Section` "
 topic:      " `Topic` "
