--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,10 +31,15 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-# markdown:  kramdown
 # permalink: pretty
-markdown: kramdown
+# markdown:  kramdown
 highlighter: rouge
+# kramdown:
+#   input: GFM
+#   syntax_highlighter_opts:
+#     default_lang: html
+#     css_class   : 'syntax'
+# verbose: true
 theme:    topix-jk-theme-01
 # plugins:
 #   - jekyll-feed
