--- a/docs/_data/topix.yml
+++ b/docs/_data/topix.yml
@@ -12,4 +12,4 @@ howto:      " `Howto` "
 whatis:     " `Whatis` "
 tutorial:   " `Tutorial` "
 ## acronym
-dom:        " Documentation model"
+dom:        " Documentation Model"
