--- a/docs/_data/name.yml
+++ b/docs/_data/name.yml
@@ -12,6 +12,12 @@ hugo:         " `Hugo` "
 jekyll:       " `Jekyll` "
 topix:        " `Topix` "
 vscode:       " `VSCode` "
+buildah:      " `Buildah` "
+docker:      " `Docker` "
+lxc:         " `LXC.` "
+lxd:         " `LXD.` "
+## specification
+oci:         " `OCI.` "
 ## language
 bash:         " `Bash` "
 java:         " `Java` "
@@ -33,6 +39,7 @@ scm:          "SCM." # Source Content Management
 rmt:          "RMT." # Requirements Management Tools
 alm:          "ALM." # Application Lifecycle Management Tools
 ## Computer
+os:           "OS."  # Virtual Machine
 vm:           "VM."  # Virtual Machine
 api:          "API." # Application Programing Interface
 cli:          "CLI." # Command Line Interface
