--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -64,9 +64,11 @@ collections:
     output: true
   languages: 
     output: true
+  os: 
+    output: true 
   projects: 
     output: true
-  os: 
+  security: 
     output: true 
   tools: 
     output: true 
